--- a/src/view/Nav.scss
+++ b/src/view/Nav.scss
@@ -24,7 +24,7 @@
       li a:hover {
         background-color: #111;
       }
-      .active {
+      .active1 {
         background-color: #04AA6D;
       }
 }
